fix representation alignment when at top / bottom of core

--- a/src/styles/single-part.css
+++ b/src/styles/single-part.css
@@ -363,12 +363,11 @@
 }
 
 .representation-wrap {
-    position: relative;
+    position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
-    min-height: 100%;
 }
 
 .next-window {
@@ -387,7 +386,7 @@
     position: absolute;
     margin: 0 auto;
     width: 1px;
-    height: 100%;
+    height: 100vh;
     background-color: #fff;
 }
 
@@ -459,7 +458,7 @@
     flex-grow: 0;
     flex-shrink: 0;
     min-margin: 4px;
-    margin: calc(var(--gap-size, 0) * 0.5 - 5px);
+    margin: calc(var(--gap-size, 0) * 0.5 - 7px);
 
 }
 
